--- a/hovg.html
+++ b/hovg.html
@@ -71,6 +71,16 @@ generating billions of dollars each year.</p>
 
     <h2>Tech Company Takeover (1995-2010)</h2>
 
+      <ul>
+
+        <li>AOL buys ImagiNation on August 6, 1996</li>
+
+        <li>Yahoo! Buys Classic Games on March 31 1998</li>
+
+        <li>Yahoo! also buys Stadeon on March 4 2005</li>
+ 
+      </ul>
+
     <h2>Today in Gaming (2010-Now)</h2>
 
     <h2>Useful Websites</h2>
