--- a/hovg.html
+++ b/hovg.html
@@ -89,10 +89,14 @@ generating billions of dollars each year.</p>
 
         <li>2018 Red Dead Redemption 2 wins the Global Game Awards which is chosen by the gamers themselves</li>
 
-        <li></li>
+        <li>April 12, 2012 Candy Crush the very addictive mobil puzzle games</li>
+
+        <li>On July 6, 2016 Pokemon Go is released to the public containing augmented reality</li>
+
+        <li>On March 3, 2017 the revolutionary portable Nintendo Switch is put out to the public</li>
 
       </ul>
-    
+
     <h2>Useful Websites</h2>
 
       <ul>
