--- a/RstaurantLab/restaurant.html
+++ b/RstaurantLab/restaurant.html
@@ -1,10 +1,17 @@
-
 <!DOCTYPE html>
+
 <html>
-<head>
-<title>Restaurant</title>
-</head>
+  
+  <head>
+    
+    <title>Restaurant</title>
+    
+  </head>
+  
 <body>
+  
+  <p>Content</p>
 
 </body>
+  
 </html>
