--- a/RstaurantLab/restaurant.html
+++ b/RstaurantLab/restaurant.html
@@ -12,6 +12,12 @@
   
   <h1>Welcome to Burger Shack!</h1>
   
+  <picture>
+    
+    <img src="https://docs.google.com/drawings/d/e/2PACX-1vQ-NQLsABu1kZxO9Hcd0c-CALJVjrHufiLrPg3FycJOOEyp9ONobEVzo8JNgTtRL0chm5rih5zYJyOc/pub?w=444&h=376">
+  
+  </picture>
+  
     <p>Old school, greasy and delicious burgers are our specialty!</p>
   
   <h2>Address</h2>
