--- a/RstaurantLab/restaurant.html
+++ b/RstaurantLab/restaurant.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   
   <head>
     
@@ -37,7 +37,7 @@ background-color: lightblue;
   
   <picture>
     
-    <img src="https://docs.google.com/drawings/d/e/2PACX-1vQ-NQLsABu1kZxO9Hcd0c-CALJVjrHufiLrPg3FycJOOEyp9ONobEVzo8JNgTtRL0chm5rih5zYJyOc/pub?w=444&amp;h=376">
+    <img src="https://docs.google.com/drawings/d/e/2PACX-1vQ-NQLsABu1kZxO9Hcd0c-CALJVjrHufiLrPg3FycJOOEyp9ONobEVzo8JNgTtRL0chm5rih5zYJyOc/pub?w=444&amp;h=376" alt="logo">
   
   </picture>
   
